[AUD-111] Fix scroll getting stuck on TopLevelPage (#191)

--- a/packages/web/src/components/bottom-bar/BottomBar.module.css
+++ b/packages/web/src/components/bottom-bar/BottomBar.module.css
@@ -15,4 +15,5 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  touch-action: none;
 }
