--- a/packages/web/src/containers/nav/mobile/NavBar.module.css
+++ b/packages/web/src/containers/nav/mobile/NavBar.module.css
@@ -12,6 +12,7 @@
   position: relative;
   min-width: var(--mobile-min-width);
   user-select: none;
+  touch-action: none;
 }
 
 .leftElement {
